--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Yaroslav Stavnichiy",
+  "repository": "yarosla/trello-custom-print",
   "license": "ISC",
   "devDependencies": {
     "@types/core-js": "^0.9.34",
@@ -13,11 +14,11 @@
     "angular2-template-loader": "^0.6.0",
     "awesome-typescript-loader": "^2.2.4",
     "copy-webpack-plugin": "^4.0.0",
-    "css-loader": "^0.25.0",
+    "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "node-sass": "^3.10.1",
-    "postcss-loader": "^1.1.0",
+    "postcss-loader": "^1.2.0",
     "raw-loader": "^0.5.1",
     "sass-loader": "^4.0.2",
     "source-map-loader": "^0.1.5",
@@ -43,6 +44,6 @@
     "@angular/router": "^3.1.0",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
-    "zone.js": "~0.6.26"
+    "zone.js": "^0.6.26"
   }
 }
