--- a/package.json
+++ b/package.json
@@ -3,49 +3,50 @@
   "version": "1.0.0",
   "description": "Customized Trello board print out.",
   "scripts": {
+    "build": "webpack -d",
+    "watch": "webpack -d --watch",
+    "release": "webpack -p",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Yaroslav Stavnichiy",
   "repository": "yarosla/trello-custom-print",
   "license": "ISC",
   "devDependencies": {
-    "@types/core-js": "^0.9.34",
-    "@types/jquery": "^2",
-    "@types/marked": "~0.0",
-    "angular2-template-loader": "^0.6.0",
-    "awesome-typescript-loader": "3.0.0-beta.10",
-    "copy-webpack-plugin": "^4.0.0",
-    "css-loader": "^0.26.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "node-sass": "^3.10.1",
-    "postcss-loader": "^1.2.0",
-    "raw-loader": "^0.5.1",
-    "sass-loader": "^4.0.2",
-    "source-map-loader": "^0.1.5",
-    "style-loader": "^0.13.1",
-    "to-string-loader": "^1.1.5"
-  },
-  "devDependenciesInstalledGlobally": {
-    "typescript": "^2.0.3",
-    "webpack": "^1.13.2"
+    "@types/core-js": "0.9.39",
+    "@types/jquery": "^3.3.1",
+    "@types/marked": "^0.3.0",
+    "angular2-template-loader": "0.6.0",
+    "awesome-typescript-loader": "^3.5.0",
+    "copy-webpack-plugin": "4.0.0",
+    "css-loader": "0.26.1",
+    "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "0.9.0",
+    "node-sass": "^4.9.0",
+    "postcss-loader": "1.2.0",
+    "raw-loader": "0.5.1",
+    "sass-loader": "4.0.2",
+    "source-map-loader": "0.1.5",
+    "style-loader": "0.13.1",
+    "to-string-loader": "1.1.5",
+    "typescript": "2.8.3",
+    "webpack": "1.13.2"
   },
   "dependencies": {
+    "@angular/common": "^2.4.10",
+    "@angular/compiler": "^2.4.10",
+    "@angular/core": "^2.4.10",
+    "@angular/forms": "^2.4.10",
+    "@angular/http": "^2.4.10",
+    "@angular/platform-browser": "^2.4.10",
+    "@angular/platform-browser-dynamic": "^2.4.10",
+    "@angular/platform-server": "^2.4.10",
+    "@angular/router": "^3.4.10",
     "bootstrap-sass": "^3.3.7",
-    "core-js": "^2.4.1",
-    "jquery": "^3.1.1",
-    "@angular/common": "^2.3.0",
-    "@angular/compiler": "^2.3.0",
-    "@angular/core": "^2.3.0",
-    "@angular/forms": "^2.3.0",
-    "@angular/http": "^2.3.0",
-    "@angular/platform-browser": "^2.3.0",
-    "@angular/platform-browser-dynamic": "^2.3.0",
-    "@angular/platform-server": "^2.3.0",
-    "@angular/router": "^3.1.0",
-    "reflect-metadata": "^0.1.8",
-    "rxjs": "5.0.0-rc.4",
-    "zone.js": "^0.7.2",
-    "marked": "^0.3.6"
+    "core-js": "^2.5.6",
+    "jquery": "^3.3.1",
+    "marked": "^0.3.19",
+    "reflect-metadata": "0.1.8",
+    "rxjs": "5.6.0-forward-compat.4",
+    "zone.js": "^0.7.8"
   }
 }
