--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "module": "commonjs",
+    "lib": [ "es6", "dom", "es2017" ],
     "target": "es5"
   }
 }
